--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "proxy-server-radio",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "proxy-server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node proxy-server.js"
   },
   "keywords": [],
   "author": "",
